--- a/css/main.css
+++ b/css/main.css
@@ -8,9 +8,9 @@ layout: null
 
 /*
 #mc_embed_signup {
-  background: #fff; 
-  clear: left; 
-  font: 14px Helvetica, Arial, sans-serif; 
+  background: #fff;
+  clear: left;
+  font: 14px Helvetica, Arial, sans-serif;
 }
 */
 
@@ -877,3 +877,19 @@ pre {
   font-style: italic;
   font-size: 16px;
 }
+
+/* Embedded Youtube */
+.embed-youtube {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 25px;
+    height: 0;
+  }
+
+.embed-youtube iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
